deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: worklode
  namespace: worklode
spec:
  selector:
    app: worklode
  ports:
    - name: http
      port: 80
      targetPort: http
